fix: Ajusta ponto de montagem

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,29 @@
 {
-    "name": "Dev container Cota ai",
-    "dockerComposeFile": [
-        "../compose.yml"
-    ],
-    "service": "app",
-    "workspaceFolder": "/app",
-    "remoteUser": "local",
-    "shutdownAction": "stopCompose",
-    "runServices": [
-        "db"
-    ],
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "DEVSENSE.phptools-vscode",
-                "xdebug.php-debug",
-                "bmewburn.vscode-intelephense-client",
-                "xdebug.php-pack",
-                "zobo.php-intellisense",
-                "redhat.vscode-yaml",
-                "ms-azuretools.vscode-docker"
-            ]
-        }
+  "name": "Dev container Cota ai",
+  "dockerComposeFile": [
+    "../compose.yml"
+  ],
+  "service": "app",
+  "workspaceFolder": "/app",
+  "remoteUser": "local",
+  "shutdownAction": "stopCompose",
+  "runServices": [
+    "db"
+  ],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "DEVSENSE.phptools-vscode",
+        "xdebug.php-debug",
+        "bmewburn.vscode-intelephense-client",
+        "xdebug.php-pack",
+        "zobo.php-intellisense",
+        "redhat.vscode-yaml",
+        "ms-azuretools.vscode-docker"
+      ]
     }
+  },
+  "mounts": [
+    "source=${localEnv:HOME}/.ssh,target=/$HOME/.ssh,readonly,type=bind,consistency=cached"
+  ]
 }
