feat: Create MoedaSeeder

--- a/src/composer.json
+++ b/src/composer.json
@@ -10,5 +10,8 @@
     },
     "require-dev": {
         "robmorgan/phinx": "^0.16.4"
+    },
+    "require": {
+        "ramsey/uuid": "^4.7"
     }
 }
